feat: Add codemirror textfield with bash completion

--- a/web/index.html
+++ b/web/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <head>
+<script type="module" src="assets/codemirror.js"></script>
 <script type="module">
     function main() {
         document.getElementById("prompt").addEventListener("submit", handleSubmit);
