refactor: split frontend into log and prompt modules

--- a/web/index.html
+++ b/web/index.html
@@ -1,180 +1,6 @@
 <!doctype html>
 <head>
-<script type="module" src="assets/codemirror.js"></script>
-<script type="module">
-    function main() {
-        document.getElementById("prompt").addEventListener("submit", handleSubmit);
-        document.getElementById("command").addEventListener('keypress', function (e) {
-            if (e.key === 'Enter' && !e.shiftKey) {
-                handleSubmit(e);
-            }
-        });
-        document.addEventListener('keydown', function (e) {
-            // Ctrl keys seem to only work with keydown
-            // TODO: Only if currently running a command
-            if (e.key === 'c' && e.ctrlKey) {
-                handleCancel(e);
-            }
-            if (e.key === 'Tab' && !e.shiftKey) {
-                handleComplete(e);
-            }
-        });
-        document.getElementById("log").addEventListener("dblclick", function(e) {
-            for (let el of e.composedPath().reverse()) {
-                if (el.nodeName === "DETAILS") {
-                    el.open = !el.open;
-                    break;
-                }
-            }
-        })
-    }
-
-    async function handleSubmit(event) {
-        event.preventDefault();
-        const commandEl = document.getElementById("command");
-        const command = commandEl.value;
-        if (!command) {
-            return
-        }
-        const listEl = document.getElementById("completion-list");
-        listEl.innerHTML = '';
-
-        let wrapper = createLogElement(command);
-
-        commandEl.value = "";
-        commandEl.disabled = true;
-        let json;
-        try {
-            const resp = await fetch("/run", {
-                method: "POST",
-                body: command,
-            });
-            json = await resp.json();
-        } catch (error) {
-            console.error(error);
-            commandEl.disabled = false;
-            return
-        }
-
-        updateLogElement(wrapper, json);
-
-        document.getElementById("dir").textContent = json.Dir
-
-        commandEl.disabled = false;
-        commandEl.focus()
-        document.scrollingElement.scrollTop = document.scrollingElement.scrollHeight;
-    }
-
-    function createLogElement(command) {
-        // Yuck
-        const logEl = document.getElementById("log");
-        let wrapperEl = document.createElement("details");
-
-        const summaryEl = document.createElement("summary");
-        let codeEl = document.createElement("code");
-        logEl.append(wrapperEl);
-        wrapperEl.append(summaryEl);
-        summaryEl.append(codeEl);
-        codeEl.textContent = command;
-
-        return wrapperEl;
-    }
-
-    function updateLogElement(wrapper, resp) {
-        wrapper.open = true;
-        if (resp.Err) {
-            wrapper.className = "failed";
-        }
-
-        function addHtml(className, value) {
-            if (value) {
-                let div = document.createElement("div");
-                div.classList.add("term-container");
-                div.classList.add(className);
-                div.innerHTML = value;
-                wrapper.append(div);
-            }
-        }
-        function addPre(className, value) {
-            if (value) {
-                let pre = document.createElement("pre");
-                pre.className = className;
-                pre.textContent = value;
-                wrapper.append(pre);
-            }
-        }
-        addHtml("stdout", resp.Stdout)
-        addPre("stderr", resp.Stderr)
-        addPre("err", resp.Err && resp.Err.Text)
-        console.log(resp);
-    }
-
-    async function handleCancel(event) {
-        await fetch("/cancel", {
-            method: "POST",
-        });
-    }
-
-    async function handleComplete(event) {
-        event.preventDefault();
-        const commandEl = document.getElementById("command");
-        const command = commandEl.value;
-        let words = command.split(" ")
-        const lastWord = words[words.length - 1]
-        if (!command) {
-            return
-        }
-        let listEl = document.getElementById("completion-list");
-        if (!listEl) {
-            return
-        }
-        // TODO: sometimes hangs
-        let curComp = document.getElementsByClassName("current-completion")[0];
-        if (curComp && curComp.innerHTML === lastWord) {
-            let nextComp = curComp.nextElementSibling;
-            if (nextComp == null) {
-                nextComp = listEl.firstElementChild;
-                if (nextComp == null) {
-                    return
-                }
-            }
-            curComp.classList.remove("current-completion");
-            nextComp.classList.add("current-completion");
-            words[words.length -1] = nextComp.innerHTML;
-            commandEl.value = words.join(" ");
-            return;
-        }
-
-        // Delete existing completions
-        listEl.innerHTML = '';
-        let json;
-        try {
-            const resp = await fetch("/complete", {
-                method: "POST",
-                body: command,
-            });
-            json = await resp.json();
-        } catch (error) {
-            console.error(error);
-            return
-        }
-
-        updateCompletionList(listEl, [ lastWord, ...json]);
-    }
-
-    function updateCompletionList(listEl, resp) {
-        for (const i in resp) {
-            let li = document.createElement("li");
-            li.classList.add("completion-element");
-            li.innerHTML = resp[i];
-            listEl.append(li);
-        }
-        // First element is what's in the prompt
-        listEl.firstElementChild.hidden = true;
-        listEl.firstElementChild.classList.add("current-completion")
-    }
-    window.onload = main;
-</script>
+<script type="module" src="assets/shell.js"></script>
 <link href="terminal.css" rel="stylesheet">
 <style>
     details.failed {
@@ -208,9 +34,5 @@
 <body>
     <div id="log"></div>
     <div id="dir"></div>
-    <form id="prompt">
-        <textarea name="command" id="command"></textarea>
-        <button type="submit">Run</button>
-    </form>
-    <div id="completion"><ul id="completion-list"></ul></div>
+    <div id="prompt"></div>
 </body>
